# sniptex

./: .gitignore  260523-gemini-cli-rerun-fix.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
Casks/: sniptex.rb
docs/: cloud-goclaw.md  cloud-novita-hybrid.md  dev-flow.md  install-guide.md  latex-table-reconstruction.md  releasing.md
docs/journals/: 260606-phase-11-distribution.md  260607-ci-verify-tag-push.md  260607-phase-12-cicd-updater.md  260608-phase-13-landing-mvp.md  260610-main-window-hotkey-display.md  260610-updater-ux-no-release-yet.md
plans/: test-prompt.sh
plans/260520-0603-sniptex-tauri-mvp-v1/: phase-01-prompt-validation-go-no-go.md  phase-02-tauri-scaffold-rust-foundation.md  phase-03-agent-system-ocr-pipeline.md  phase-04-screen-capture-region-selector.md  phase-05-hotkey-tray-integration.md  phase-06-react-ui-shell-mathjax-preview.md  phase-07-sqlite-history-with-fts5-search.md  phase-08-settings-ui-onboarding-flow.md  phase-09-theme-format-toggle-ux-polish.md  phase-10-windows-cross-platform-port.md  phase-11-distribution-code-signing-installers.md  phase-12-ci-cd-release-workflow-auto-updater.md  phase-13-landing-page-install-documentation.md  phase-14-launch-demo-video.md  phase-15-packages-marketing.md  plan.md
plans/260524-1304-gemini-cli-clean-rerun-output-fix/: phase-01-gemini-cli-json-output-contract.md  phase-02-isolated-gemini-workspace-staging.md  phase-03-unsafe-output-guard-and-fallback-policy.md  phase-04-tests-and-live-rerun-validation.md  plan.md
plans/260525-history-row-preview-open/: phase-01-implement-event-emission-and-listener.md  plan.md
plans/260527-0603-add-mistral-vision-ocr-agent/: phase-01-mistral-cloud-api-adapter.md  phase-04-tests.md  (+3 more)
scripts/: generate-checksums.sh  generate-latest-json.sh  sign-mac.sh  windows-bootstrap.ps1
site/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
src/: App.tsx  main.tsx  strings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: history_smoke.rs  novita_hybrid_smoke.rs  novita_smoke.rs  tabular_e2e_smoke.rs
src-tauri/src/: commands.rs  hotkey.rs  lib.rs  main.rs  settings.rs  state.rs  tray.rs
src-tauri/src/agents/: cloud_gemini_api.rs  cloud_goclaw_api.rs  cloud_mistral_api.rs  cloud_novita_api.rs  cloud_novita_hybrid_api.rs  cloud_vision_api.rs  codex.rs  gemini_cli.rs  keychain.rs  local_ocr_api.rs  local_ocr_cache.rs  local_ocr_client.rs  local_ocr_paddleocr.rs  local_ocr_pix2tex.rs  local_ocr_router.rs  mod.rs  novita_hybrid_contract.rs  registry.rs
src-tauri/src/capture/: mod.rs  region_selector.rs  screenshot.rs  screenshot_tests.rs
src-tauri/src/ocr/: consistency.rs  dispatcher.rs  mod.rs  pdf_render.rs  pdf_render_stub.rs  postprocess.rs  prompt.rs  smart_format.rs  tabular.rs  tabular_complex_grid.rs
src-tauri/src/storage/: history.rs  migrations.rs  mod.rs  thumbnail.rs
src-tauri/tests/rust/: agent_registry_argv_test.rs  cloud_gemini_api_test.rs  cloud_goclaw_api_test.rs  cloud_mistral_api_test.rs  cloud_novita_hybrid_api_test.rs  gemini_cli_output_test.rs  local_ocr_api_test.rs  local_ocr_router_test.rs  ocr_postprocess_test.rs  ocr_smart_format_test.rs  ocr_tabular_test.rs  storage_history_test.rs
(+88 files in other folders)
