[package]
name = "sniptex"
version = "0.1.0"
description = "Free, open-source, cross-platform OCR snip tool for LaTeX and Markdown"
authors = ["SnipTeX contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "sniptex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-clipboard-manager = "=2.3.2"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-sql = { version = "=2.4.0", features = ["sqlite"] }
tauri-plugin-store = "=2.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Desktop-only plugins (autostart, updater, global-shortcut require a system tray / window context)
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-global-shortcut = "=2.3.1"
tauri-plugin-updater = "=2.10.1"
