[package]
name = "sniptex"
version = "0.1.0"
description = "Free, open-source, cross-platform OCR snip tool for LaTeX and Markdown"
authors = ["SnipTeX contributors"]
license = "MIT"
edition = "2021"
default-run = "sniptex"

[lib]
name = "sniptex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "=2.3.2"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-sql = { version = "=2.4.0", features = ["sqlite"] }
tauri-plugin-store = "=2.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Phase 3: agent dispatch + OCR pipeline
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
keyring = "3"

# Phase 4: screen capture + region selector
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }

# Phase 7: SQLite history + FTS5 search + WebP thumbnails
rusqlite = { version = "0.32", features = ["bundled"] }
webp = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "cli_test"
path = "src/bin/cli_test.rs"

[[bin]]
name = "history_smoke"
path = "src/bin/history_smoke.rs"

[[test]]
name = "ocr_postprocess"
path = "tests/rust/ocr_postprocess_test.rs"

[[test]]
name = "ocr_smart_format"
path = "tests/rust/ocr_smart_format_test.rs"

[[test]]
name = "cloud_gemini_api"
path = "tests/rust/cloud_gemini_api_test.rs"

[[test]]
name = "agent_registry_argv"
path = "tests/rust/agent_registry_argv_test.rs"

[[test]]
name = "storage_history"
path = "tests/rust/storage_history_test.rs"

# Desktop-only plugins (autostart, updater, global-shortcut require a system tray / window context)
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-global-shortcut = "=2.3.1"
tauri-plugin-updater = "=2.10.1"
